# obs-lowerthirds-plus-macOS-v.1

./: .gitignore  BUILD_OBS_GUIDE.md  CMakeLists.txt  INSTALL_GUIDE.md  Info.plist.in  LICENSE  LowerThirdsPlus-v1.0-macOS.dmg  QUICK_START.md  README.md  TROUBLESHOOTING.md  build.sh
Distribution/: HOW_TO_INSTALL_ON_MACOS.md  INSTALL.command  INSTALL.md  LowerThirdsPlus-v1.0-macOS.dmg  QUICK_REFERENCE.md  README.md  USER_GUIDE.md
data/locale/: en-US.ini
src/: json-loader.cpp  json-loader.hpp  lowerthirds-source-simple.cpp  lowerthirds-source-simple.hpp  plugin-main-simple.cpp
